--- a/.octocov.yml
+++ b/.octocov.yml
@@ -12,3 +12,11 @@ report:
     - local://central-reports
 coverage:
   path: coverage/**/coverage.out
+central:
+  root: central
+  reports:
+    datastores:
+      - local://central-reports
+  badges:
+    datastores:
+      - local://central-badges
